fix overflow on x

--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    overflow-x: hidden;
 }
 
 body::before {
